--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,19 +1,34 @@
 /* @media screen and (max-width: 768px) { */
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .logo-left {
-    display: flex;
-    align-items: center;
-  }
-  .logo-right {
-    display: flex;
-    align-items: center;
-  }
-  .logo-left > img {
-    height: 20px;
-  }
+.logo-left {
+  display: flex;
+  align-items: center;
+}
+.logo-right {
+  display: flex;
+  align-items: center;
+}
+.logo-left > img {
+  height: 30px;
+}
+.logo-text {
+  color: rgb(248, 66, 142);
+  font-family: "Maven Pro", sans-serif;
+  font-weight: 500;
+  font-size: 1.7rem;
+  margin-left: 5px;
+}
+.avatar-img {
+  background-color: rgb(248, 66, 142) !important;
+  margin-right: 2rem;
+}
+.fa-bell {
+  color: rgb(250, 49, 74);
+  font-size: 1.3rem;
+}
 /* } */
