--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -4,6 +4,8 @@
   align-items: center;
   background-color: rgb(248, 66, 142);
   border-radius: 20px;
+  /* box-shadow: 0 3px 2px rgb(54, 53, 53), 0 -3px 2px rgb(54, 53, 53); */
+  box-shadow: 0px 5px 5px #888, 0px -5px 5px #888;
 }
 .hero-balance,
 .hero-equivalent {
@@ -38,7 +40,8 @@
   font-weight: 500;
   font-size: 20px;
 }
-.balance,.equivalent {
+.balance,
+.equivalent {
   color: #fff;
   font-weight: 600;
   font-size: 12px;
