--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -6,6 +6,7 @@
   border-radius: 20px;
   /* box-shadow: 0 3px 2px rgb(54, 53, 53), 0 -3px 2px rgb(54, 53, 53); */
   box-shadow: 0px 5px 5px #888, 0px -5px 5px #888;
+  margin-top: 30px;
 }
 .hero-balance,
 .hero-equivalent {
@@ -14,7 +15,7 @@
 }
 .afya,
 .zar {
-  margin-top: 1rem;
+  margin-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,6 +40,7 @@
   color: #fff;
   font-weight: 500;
   font-size: 20px;
+  margin-bottom: 10px;
 }
 .balance,
 .equivalent {
