--- a/src/components/recentactivity.css
+++ b/src/components/recentactivity.css
@@ -21,7 +21,7 @@
   justify-content: space-between;
 }
 .hiv-session > img {
-  width: 12%;
+  width: 26px;
 }
 .hiv-session > p {
   color: rgb(143, 141, 141);
