--- a/src/components/Selectcurreny.css
+++ b/src/components/Selectcurreny.css
@@ -70,3 +70,10 @@ Button {
   color: white !important;
   border-radius: 7px !important;
 }
+.btn {
+  width: 100% !important;
+  outline: none !important;
+  border: none !important;
+  border-radius: 0 !important;
+  background-color: #d9d9d9 !important;
+}
